--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,7 @@
     { "src": "package.json", "use": "@vercel/static-build" }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "/index.html" }
+    { "src": "/(.*)", "dest": "/index.html", "has": [ { "type": "host", "value": "*" } ], "continue": true },
+    { "src": "/(.*)", "dest": "/index.html", "status": 200, "check": true }
   ]
 }
